roboshop-ansible-role

--- a/main.yaml
+++ b/main.yaml
@@ -1,6 +1,12 @@
-- name: "install {{component}}"
-  hosts: "{{component}}"
+# - name: "install {{component}}"
+#   hosts: "{{component}}"
+#   become: yes
+#   roles:
+#   - "{{component}}"
+
+
+- name: Install {{ component }}
+  hosts: "{{ component }}"
   become: yes
   roles:
-  - "{{component}}"
-  
+    - "{{ component }}"
