--- a/main.yaml
+++ b/main.yaml
@@ -1,12 +1,8 @@
-# - name: "install {{component}}"
-#   hosts: "{{component}}"
-#   become: yes
-#   roles:
-#   - "{{component}}"
-
-
-- name: Install {{ component }}
-  hosts: "{{ component }}"
+- name: install "{{component}}"
+  hosts: "{{component}}"
   become: yes
   roles:
-    - "{{ component }}"
+  - "{{component}}"
+
+
+
