--- a/main.yaml
+++ b/main.yaml
@@ -1,8 +1,5 @@
-- name: "install {{component}}"
+- name: "Install {{component}}"
   hosts: "{{component}}"
   become: yes
   roles:
    - "{{component}}"
-
-
-
