--- a/main.yaml
+++ b/main.yaml
@@ -1,5 +1,5 @@
-- name: "Install {{component}}"
+- name: "install {{component}}"
   hosts: "{{component}}"
   become: yes
   roles:
-   - "{{component}}"
+  - "{{component}}"
