--- a/roles/mongodb/tasks/main.yaml
+++ b/roles/mongodb/tasks/main.yaml
@@ -2,6 +2,7 @@
   ansible.builtin.copy:
     src: mongodb.repo
     dest: /etc/yum.repos.d/mongodb.repo
+    remote-src: yes
   
 - name: Install mongodb
   ansible.builtin.package:
