--- a/roles/mongodb/tasks/main.yaml
+++ b/roles/mongodb/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: Copy mongodb repo
   ansible.builtin.copy:
-    src: mongodb.repo
-    dest: /etc/yum.repos.d/mongodb.repo
+    src: mongo.repo.j2
+    dest: /etc/yum.repos.d/mongo.repo
     remot_src: yes
   
 - name: Install mongodb
