--- a/roles/mongodb/tasks/main.yaml
+++ b/roles/mongodb/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Copy mongodb repo
   ansible.builtin.copy:
-    src: mongo.repo.j2
+    src: mongo.repo
     dest: /etc/yum.repos.d/mongo.repo
     remote_src: yes
   
@@ -25,4 +25,3 @@
   ansible.builtin.service:
     name: mongod
     state: restarted
-    
