--- a/roles/common/tasks/appsetup.yaml
+++ b/roles/common/tasks/appsetup.yaml
@@ -8,7 +8,7 @@
     state: absent
 
 - name: Create app directory
-  ansible.buildin.file:
+  ansible.builtin.file:
     path: /app
     state: directory
 
