--- a/roles/common/tasks/nodejs.yaml
+++ b/roles/common/tasks/nodejs.yaml
@@ -7,6 +7,6 @@
       state: present
 
 - name: Install dependencies
-  ansible.builtin.command: npm install
-    args:
-      chdir: /app
+  ansible.builtin.commond: npm install
+  args:
+    chdir: /app
