--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -7,4 +7,9 @@
   ansible.builtin.import_role:
     name: common
     tasks_from: nodejs
+
+- name: mongodb-setup
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: mongodb-setup
     
