--- a/roles/common/tasks/mongodb-setup.yaml
+++ b/roles/common/tasks/mongodb-setup.yaml
@@ -1,5 +1,5 @@
 - name: copy mongodb repo
-  ansibel.builtin.copy: 
+  ansible.builtin.copy: 
     src: mongodb.repo
     dest: /etc/yum.repos.d/mongodb.repo
 
