--- a/roles/common/tasks/mongodb-setup.yaml
+++ b/roles/common/tasks/mongodb-setup.yaml
@@ -9,17 +9,17 @@
     state: present
 
 - name: "get the catalogue entries count"
-  ansible.builtin.shell:  mongo --host {{mongodb.aidevops.website}} --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
+  ansible.builtin.shell:  mongo --host mongodb.aidevops.website --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
   register: products_count
   when: component == "catalogue"
 
 - name: "get the user entries count"
-  ansible.builtin.shell:  mongo --host {{mongodb.aidevops.website}} --quiet --eval 'db = db.getSiblingDB("users"); db.users.count()'
+  ansible.builtin.shell:  mongo --host mongodb.aidevops.website --quiet --eval 'db = db.getSiblingDB("users"); db.users.count()'
   register: users_count
   when: component == "user"
 
 - name: "load catalogue data"
-  ansible.builtin.shell: "mongo --host {{mongodb.aidevops.website}} < /app/schema/{{component}}.js"
+  ansible.builtin.shell: "mongo --host mongodb.aidevops.website < /app/schema/{{component}}.js"
   when: component == "catalogue" and products_count.stdout == "0"  # keep double quotes
   #ignore_errors: true
 
