--- a/roles/common/tasks/mongodb-setup.yaml
+++ b/roles/common/tasks/mongodb-setup.yaml
@@ -24,7 +24,7 @@
   #ignore_errors: true
 
 - name: "load user data"
-  ansible.builtin.shell: "mongo --host {{MONGODB_HOST}} < /app/schema/{{component}}.js"
+  ansible.builtin.shell: "mongo --host mongodb.aidevops.website < /app/schema/{{component}}.js"
   when: component == "user" and users_count.stdout == "0"  # keep double quotes
   #ignore_errors: true 
 
