--- a/roles/user/tasks/main.yaml
+++ b/roles/user/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: app setup
   ansible.builtin.import_role:
     name: common
-    tasks_from: app-setup
+    tasks_from: appsetup
 
 - name: nodejs
   ansible.builtin.import_role:
