roboshop-ansible-roles

--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -9,7 +9,7 @@
     state: absent
 
 - name: creating html 
-  ansible.buitin.file:
+  ansible.builtin.file:
     path: /usr/share/nginx/html
     state: directory
 
