roboshop-ansible-roles

--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -21,6 +21,8 @@
 - name: extract the application
   ansible.builtin.unarchive:
     src: /tmp/web.zip
-    dest: /usr/share/nginx/html  
+    dest: /usr/share/nginx/html
+    remote_src: yes 
+
 
 
