--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -24,5 +24,14 @@
     dest: /usr/share/nginx/html
     remote_src: yes 
 
+- name: copying roboshop configuration
+  ansible.builtin.copy:
+    src: roboshop.conf.j2
+    dest: /etc/nginx/default.d/roboshop.conf
+    
+  notify:
+  - Restart nginx
+
+
 
 
