roboshop-ansible-roles

--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -26,7 +26,7 @@
 
 - name: copying roboshop configuration
   ansible.builtin.copy:
-    src: roboshop.conf.j2
+    src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
 
   notify:
