--- a/roles/web/files/roboshop.conf
+++ b/roles/web/files/roboshop.conf
@@ -4,9 +4,9 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass catalogue.aidevops.website:8080/; }
-location /api/user/ { proxy_pass user.aidevops.website:8080/; }
-location /api/cart/ { proxy_pass cart.aidevops.website:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue.aidevops.website:8080/; }
+location /api/user/ { proxy_pass http://user.aidevops.website:8080/; }
+location /api/cart/ { proxy_pass http://cart.aidevops.website:8080/; }
 location /api/shipping/ { proxy_pass http://localhost:8080/; }
 location /api/payment/ { proxy_pass http://localhost:8080/; }
 
