roboshop-ansible-roles

--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -12,4 +12,9 @@
   ansible.builtin.import_role:
     name: common
     tasks_from: mongodb-setup
+
+- name: system start
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: systemd
     
